fix log wrapping into 2 lines

--- a/client/assets/styles/scss/components/external/termjs.scss
+++ b/client/assets/styles/scss/components/external/termjs.scss
@@ -40,6 +40,7 @@
 
   > div {
     padding: 0 9px;
+    white-space: nowrap;
   }
 }
 
